--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,13 @@ jobs:
         run: npm install --legacy-peer-deps  
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile --tag rifkinauvaldzaki/portofolio-rifki:latest
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}  # Set this in your GitHub repository secrets
+          password: ${{ secrets.DOCKER_TOKEN }}      # Set this in your GitHub repository secrets
+
+      - name: Push the Docker image
+        run: docker push rifkinauvaldzaki/portofolio-rifki:latest
