--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -14,15 +14,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
- 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag rifkinauvaldzaki/portofolio-rifki:latest
+        run: docker build . --file Dockerfile --tag rifkinauvaldzaki/portofolio-rifki:latest || true
+
+      - name: Debugging Information
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "Listing files:"
+          ls -la
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Set this in your GitHub repository secrets
-          password: ${{ secrets.DOCKER_TOKEN }}      # Set this in your GitHub repository secrets
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Push the Docker image
         run: docker push rifkinauvaldzaki/portofolio-rifki:latest
