--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,12 @@
-name: Docker Image CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main  # Change this to your main branch
   pull_request:
-    branches: ["main"]
+    branches:
+      - main  # Change this to your main branch
 
 jobs:
   build:
@@ -12,23 +14,30 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag rifkinauvaldzaki/portofolio-rifki:latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'  # Match this to your Docker node version
 
-      - name: Debugging Information
+      - name: Install dependencies
         run: |
-          echo "Current working directory:"
-          pwd
-          echo "Listing files:"
-          ls -la
+          npm install
+
+      - name: Build Docker image
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          MY_EMAIL: ${{ secrets.MY_EMAIL }}
+        run: |
+          docker build -t rifkinauvaldzaki/portofolio-rifki:latest .
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Push the Docker image
-        run: docker push rifkinauvaldzaki/portofolio-rifki:latest
+      - name: Push Docker image
+        run: |
+          docker push rifkinauvaldzaki/portofolio-rifki:latest
