--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,28 +16,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.8.0'  # Match this to your Docker node version
-
-      - name: Install dependencies
-        run: |
-          npm install
-
-      - name: Build Docker image
-        env:
-          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-          MY_EMAIL: ${{ secrets.MY_EMAIL }}
-        run: |
-          docker build -t rifkinauvaldzaki/portofolio-rifki:latest .
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Build Docker image
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          MY_EMAIL: ${{ secrets.MY_EMAIL }}
+        run: |
+          docker build --build-arg RESEND_API_KEY=${{ secrets.RESEND_API_KEY }} -t rifkinauvaldzaki/portofolio-rifki:latest .
+          
       - name: Push Docker image
         run: |
           docker push rifkinauvaldzaki/portofolio-rifki:latest
