--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,34 +1,21 @@
-name: CI/CD Pipeline
-
+name: GitHub Actions Vercel Production Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
     branches:
-      - main  # Change this to your main branch
-  pull_request:
-    branches:
-      - main  # Change this to your main branch
-
+      - main
 jobs:
-  build:
+  Deploy-Production:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Build Docker image
-        env:
-          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-          MY_EMAIL: ${{ secrets.MY_EMAIL }}
-        run: |
-          docker build --build-arg RESEND_API_KEY=${{ secrets.RESEND_API_KEY }} -t rifkinauvaldzaki/portofolio-rifki:latest .
-          
-      - name: Push Docker image
-        run: |
-          docker push rifkinauvaldzaki/portofolio-rifki:latest
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@canary
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
